--- a/package.json
+++ b/package.json
@@ -12,19 +12,25 @@
   "engines": {
     "node": ">=10"
   },
-  "scripts": {},
+  "scripts": {
+    "lint": "eslint $PWD/'**/*.[jt]s?(x)'",
+    "lint:fix": "prettier-eslint $PWD/'**/*.[jt]s?(x)' --write"
+  },
   "peerDependencies": {
     "react": ">=16"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "4.4.1",
     "@typescript-eslint/parser": "4.4.1",
-    "eslint": "7.11.0",
-    "eslint-config-airbnb": "18.2.0",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsx-a11y": "6.3.1",
-    "eslint-plugin-react": "7.21.4",
-    "eslint-plugin-react-hooks": "4.1.2",
+    "eslint": "^7.10.0",
+    "eslint-config-prettier": "^6.12.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.21.2",
+    "eslint-plugin-react-hooks": "^4.1.2",
+    "prettier": "^2.1.2",
+    "prettier-eslint": "^11.0.0",
+    "prettier-eslint-cli": "^5.0.0",
     "typescript": "4.0.3"
   },
   "dependencies": {}
