--- a/package.json
+++ b/package.json
@@ -16,6 +16,17 @@
     "lint": "eslint $PWD/'**/*.[jt]s?(x)'",
     "lint:fix": "prettier-eslint $PWD/'**/*.[jt]s?(x)' --write"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.[jt]s?(x)": [
+      "npm run lint:fix",
+      "git add"
+    ]
+  },
   "peerDependencies": {
     "react": ">=16"
   },
@@ -28,6 +39,8 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.2",
     "eslint-plugin-react-hooks": "^4.1.2",
+    "husky": "4.3.0",
+    "lint-staged": "10.4.0",
     "prettier": "^2.1.2",
     "prettier-eslint": "^11.0.0",
     "prettier-eslint-cli": "^5.0.0",
