--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,13 @@
 {
   "tabWidth": 2,
   "useTabs": false,
-  "singleQuote": true
+  "singleQuote": true,
+  "overrides": [
+    {
+      "files": ["**/*.css", "**/*.scss", "**/*.html", "**/*.json"],
+      "options": {
+        "singleQuote": false
+      }
+    }
+  ]
 }
