--- a/package.json
+++ b/package.json
@@ -7,12 +7,18 @@
     "type": "git",
     "url": "git@github.com:stopyransky/fh-hooks.git"
   },
-  "main": "dist/fh-hooks.cjs.js",
-  "module": "dist/fh-hooks.esm.js",
+  "description": "Custom react hooks",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.esm.js",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "engines": {
     "node": ">=10"
   },
   "scripts": {
+    "build": "rollup -c",
     "lint": "eslint $PWD/'**/*.[jt]s?(x)'",
     "lint:fix": "prettier-eslint $PWD/'**/*.[jt]s?(x)' --write"
   },
@@ -27,14 +33,17 @@
     ]
   },
   "peerDependencies": {
-    "react": ">=16"
+    "react": "^16.13.1",
+    "react-dom": "16.13.1"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "11.1.0",
+    "@rollup/plugin-node-resolve": "7.1.3",
+    "@types/react": "16.9.52",
     "@typescript-eslint/eslint-plugin": "4.4.1",
     "@typescript-eslint/parser": "4.4.1",
     "eslint": "^7.10.0",
     "eslint-config-prettier": "^6.12.0",
-    "eslint-loader": "^4.0.2",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.2",
     "eslint-plugin-react-hooks": "^4.1.2",
@@ -43,7 +52,13 @@
     "prettier": "^2.1.2",
     "prettier-eslint": "^11.0.0",
     "prettier-eslint-cli": "^5.0.0",
-    "typescript": "4.0.3"
+    "react": "^16.13.1",
+    "react-dom": "16.13.1",
+    "rollup": "2.30.0",
+    "rollup-plugin-peer-deps-external": "2.2.3",
+    "rollup-plugin-terser": "7.0.2",
+    "rollup-plugin-typescript2": "0.27.3",
+    "typescript": "^4.0.3"
   },
   "dependencies": {}
 }
