--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "description": "Custom react hooks",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
-  "types": "./dist/index.d.ts",
+  "types": "dist/index.d.ts",
   "files": [
     "dist"
   ],
@@ -18,6 +18,7 @@
     "node": ">=10"
   },
   "scripts": {
+    "prebuild": "rimraf dist",
     "build": "rollup -c",
     "lint": "eslint $PWD/'**/*.[jt]s?(x)'",
     "lint:fix": "prettier-eslint $PWD/'**/*.[jt]s?(x)' --write"
@@ -54,6 +55,7 @@
     "prettier-eslint-cli": "^5.0.0",
     "react": "^16.13.1",
     "react-dom": "16.13.1",
+    "rimraf": "3.0.2",
     "rollup": "2.30.0",
     "rollup-plugin-peer-deps-external": "2.2.3",
     "rollup-plugin-terser": "7.0.2",
