--- a/package.json
+++ b/package.json
@@ -38,6 +38,10 @@
     "react-dom": "16.13.1"
   },
   "devDependencies": {
+    "@babel/core": "7.11.6",
+    "@babel/preset-env": "7.11.5",
+    "@babel/preset-react": "7.10.4",
+    "@rollup/plugin-babel": "5.2.1",
     "@rollup/plugin-commonjs": "11.1.0",
     "@rollup/plugin-node-resolve": "7.1.3",
     "@types/react": "16.9.52",
@@ -57,7 +61,6 @@
     "react-dom": "16.13.1",
     "rimraf": "3.0.2",
     "rollup": "2.30.0",
-    "rollup-plugin-peer-deps-external": "2.2.3",
     "rollup-plugin-terser": "7.0.2",
     "rollup-plugin-typescript2": "0.27.3",
     "typescript": "^4.0.3"
