named exports and move hooks to separate folders

--- a/.babelrc
+++ b/.babelrc
@@ -10,4 +10,9 @@
     ],
     "@babel/react"
   ]
+  // "env": {
+  //   "test": {
+  //     "presets": ["@babel/env", "@babel/react"]
+  //   }
+  // }
 }
