--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "description": "Custom react hooks",
   "main": "dist/bundle.cjs.js",
   "module": "dist/bundle.esm.js",
+  "sideEffects": false,
   "files": [
     "dist"
   ],
@@ -33,7 +34,7 @@
     ]
   },
   "peerDependencies": {
-    "react": "^16.13.1",
+    "react": "16.13.1",
     "react-dom": "16.13.1"
   },
   "devDependencies": {
@@ -56,7 +57,7 @@
     "prettier": "^2.1.2",
     "prettier-eslint": "^11.0.0",
     "prettier-eslint-cli": "^5.0.0",
-    "react": "^16.13.1",
+    "react": "16.13.1",
     "react-dom": "16.13.1",
     "rimraf": "3.0.2",
     "rollup": "2.30.0",
