--- a/package.json
+++ b/package.json
@@ -44,26 +44,54 @@
     "@rollup/plugin-babel": "5.2.1",
     "@rollup/plugin-commonjs": "11.1.0",
     "@rollup/plugin-node-resolve": "7.1.3",
+    "@testing-library/react-hooks": "3.4.2",
+    "@types/jest": "26.0.14",
     "@types/react": "16.9.52",
     "@typescript-eslint/eslint-plugin": "4.4.1",
     "@typescript-eslint/parser": "4.4.1",
+    "babel-core": "6.26.3",
+    "babel-jest": "26.5.2",
     "eslint": "^7.10.0",
     "eslint-config-prettier": "^6.12.0",
+    "eslint-plugin-jest": "24.1.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.2",
     "eslint-plugin-react-hooks": "^4.1.2",
     "husky": "4.3.0",
+    "jest": "26.5.3",
     "lint-staged": "10.4.0",
     "prettier": "^2.1.2",
     "prettier-eslint": "^11.0.0",
     "prettier-eslint-cli": "^5.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-test-renderer": "16.14.0",
     "rimraf": "3.0.2",
     "rollup": "2.30.0",
     "rollup-plugin-terser": "7.0.2",
     "rollup-plugin-typescript2": "0.27.3",
+    "ts-jest": "26.4.1",
     "typescript": "^4.0.3"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "jest": {
+    "roots": [
+      "<rootDir>/src"
+    ],
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.tsx?$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ],
+    "moduleNameMapper": {
+      "\\.css$": "<rootDir>/mocks/style.js"
+    }
+  }
 }
