--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "node_modules",
     "dist",
     "src/**/*.stories.tsx",
-    "src/**/*.test.tsx"
+    "src/**/*.test.tsx",
+    "src/**/*.test.ts"
   ]
 }
