add better types for useSmartReducer, integrate travis and coveralls

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
+    "test:coveralls": "jest --coverage --coverageReporters=text-lcov | coveralls",
     "test:staged": "jest --findRelatedTests",
     "prebuild": "rimraf dist",
     "build": "rollup -c",
@@ -56,6 +57,7 @@
     "@typescript-eslint/parser": "4.4.1",
     "babel-core": "6.26.3",
     "babel-jest": "26.5.2",
+    "coveralls": "3.1.0",
     "eslint": "^7.10.0",
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-jest": "24.1.0",
