--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fh-hooks",
-  "version": "1.1.2",
+  "version": "1.1.1",
   "license": "MIT",
   "author": "Karol Stopyra",
   "repository": {
@@ -20,6 +20,7 @@
     "node": ">=10"
   },
   "scripts": {
+    "bump": "npm version patch",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
