--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "build": "rollup -c",
     "lint": "eslint $PWD/'**/*.[jt]s?(x)'",
     "lint:fix": "prettier-eslint $PWD/'**/*.[jt]s?(x)' --write",
-    "prepublish": "npm run build"
+    "prepare": "npm run build"
   },
   "husky": {
     "hooks": {
