--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true
   },
-  "include": ["src/**/*", "src/*"],
+  "include": ["src/**/*", "src/*", "index.d.ts"],
   "exclude": [
     "node_modules",
     "dist",
