--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   ],
   "sideEffects": false,
   "engines": {
-    "node": ">=10"
+    "node": ">=12.13.0",
+    "npm": ">=6.14.8"
   },
   "scripts": {
     "bump": "npm version patch",
@@ -45,8 +46,8 @@
     ]
   },
   "peerDependencies": {
-    "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react": "16.14.0",
+    "react-dom": "16.14.0"
   },
   "devDependencies": {
     "@babel/core": "7.11.6",
@@ -65,19 +66,19 @@
     "babel-jest": "26.5.2",
     "coveralls": "3.1.0",
     "eslint": "^7.10.0",
-    "eslint-config-prettier": "^6.12.0",
+    "eslint-config-prettier": "6.13.0",
     "eslint-plugin-jest": "24.1.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.21.2",
-    "eslint-plugin-react-hooks": "^4.1.2",
+    "eslint-plugin-react": "7.21.5",
+    "eslint-plugin-react-hooks": "4.2.0",
     "husky": "4.3.0",
     "jest": "26.5.3",
     "lint-staged": "10.4.0",
     "prettier": "^2.1.2",
     "prettier-eslint": "^11.0.0",
     "prettier-eslint-cli": "^5.0.0",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react": "16.14.0",
+    "react-dom": "16.14.0",
     "react-test-renderer": "16.14.0",
     "rimraf": "3.0.2",
     "rollup": "2.30.0",
