--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,7 @@ deploy:
   provider: npm
   email: $EMAIL_ADDRESS
   api_key:
-    secure: $NPM_KEY_ENCRYPT
+    secure: $NPM_ENCRYPTED_KEY
   on:
     tags: true
     repo: stopyransky/fh-hooks
-  skip_cleanup: 'true'
