--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,12 @@ node_js:
 script:
   - npm run lint
   - npm run test:coveralls
+deploy:
+  provider: npm
+  email: $EMAIL_ADDRESS
+  api_key: $NPM_KEY
+  on:
+    branch: master
+    repo: stopyransky/fh-hooks
 notifications:
   email: false
