--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ script:
   - npm run lint
   - npm run test:coveralls
 deploy:
+  skip_cleanup: true
   provider: npm
   email: $EMAIL_ADDRESS
   api_key: $NPM_KEY
