--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ node_js:
 script:
   - npm run lint
   - npm run test:coveralls
+after_success: npx semantic-release
 deploy:
   skip_cleanup: true
   provider: npm
