--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fh-hooks",
-  "version": "1.3.12",
+  "version": "0.0.0-dev",
   "license": "MIT",
   "author": "Karol Stopyra",
   "repository": {
