--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fh-hooks",
-  "version": "0.0.0-dev",
+  "version": "0.0.0-development",
   "license": "MIT",
   "author": "Karol Stopyra",
   "repository": {
@@ -32,7 +32,8 @@
     "build": "rollup -c",
     "lint": "eslint $PWD/'**/*.[jt]s?(x)'",
     "lint:fix": "prettier-eslint $PWD/'**/*.[jt]s?(x)' --write",
-    "prepare": "npm run build"
+    "prepare": "npm run build",
+    "semantic-release": "semantic-release"
   },
   "husky": {
     "hooks": {
@@ -140,7 +141,7 @@
     "rollup": "2.30.0",
     "rollup-plugin-terser": "7.0.2",
     "rollup-plugin-typescript2": "0.27.3",
-    "semantic-release": "17.2.1",
+    "semantic-release": "^17.2.1",
     "ts-jest": "26.4.1",
     "typescript": "^4.0.3"
   },
