--- a/package.json
+++ b/package.json
@@ -179,8 +179,8 @@
     ]
   },
   "peerDependencies": {
-    "react": "16.14.0",
-    "react-dom": "16.14.0"
+    "react": ">=16.14.0",
+    "react-dom": ">=16.14.0"
   },
   "devDependencies": {
     "@babel/core": "7.11.6",
