--- a/package.json
+++ b/package.json
@@ -166,6 +166,7 @@
           "changelogTitle": "# Changelog\n\nAll notable changes to this project will be documented in this file. See\n[Conventional Commits](https://conventionalcommits.org) for commit guidelines."
         }
       ],
+      "@semantic-release/npm",
       [
         "@semantic-release/git",
         {
@@ -174,8 +175,7 @@
             "package.json"
           ]
         }
-      ],
-      "@semantic-release/npm"
+      ]
     ]
   },
   "peerDependencies": {
