ci: bump to see updates
BREAKING: must bump

--- a/package.json
+++ b/package.json
@@ -148,6 +148,10 @@
             {
               "type": "style",
               "release": "patch"
+            },
+            {
+              "type": "test",
+              "release": "patch"
             }
           ],
           "parserOpts": {
