--- a/.travis.yml
+++ b/.travis.yml
@@ -6,14 +6,6 @@ node_js:
 script:
   - npm run lint
   - npm run test:coveralls
-after_success: npx semantic-release
-deploy:
-  skip_cleanup: true
-  provider: npm
-  email: $EMAIL_ADDRESS
-  api_key: $NPM_KEY
-  on:
-    branch: master
-    repo: stopyransky/fh-hooks
+  - npm run semantic-release
 notifications:
   email: false
