--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
   "prettier.jsxSingleQuote": true,
   "prettier.singleQuote": true,
   "editor.formatOnSave": true,
+  "prettier.disableLanguages": [],
   "prettier.eslintIntegration": true
 }
