--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "scripts": {
     "dev": "rollup -c -w",
     "test": "jest",
-    "test:watch": "jest --watch",
+    "test:watch": "jest --watch --silent",
     "test:coverage": "jest --coverage",
     "test:coveralls": "jest --coverage --coverageReporters=text-lcov | coveralls",
     "test:staged": "jest --findRelatedTests",
@@ -60,7 +60,9 @@
     "@typescript-eslint/parser": "4.4.1",
     "babel-core": "6.26.3",
     "babel-jest": "26.5.2",
+    "commitizen": "4.2.3",
     "coveralls": "3.1.0",
+    "cz-conventional-changelog": "3.2.0",
     "eslint": "^7.10.0",
     "eslint-config-prettier": "6.13.0",
     "eslint-plugin-jest": "24.1.0",
@@ -84,7 +86,6 @@
     "ts-jest": "26.4.1",
     "typescript": "^4.0.3"
   },
-  "dependencies": {},
   "release": {
     "branches": [
       "master"
@@ -144,6 +145,7 @@
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged",
+      "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true",
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
@@ -350,6 +352,11 @@
     },
     "globals": {
       "React": "writable"
+    }
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
     }
   }
 }
